# cw-countdown-days

./: .git-cliff.toml  README.md  cwplugin.json  main.py  pyproject.toml
.github/workflows/: release.yml
qml/: countdowndays-settings.qml  countdowndays.qml
